<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/dummy_logo_full"
                app:tint="?android:attr/textColorLink" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:drawableTop="@drawable/outline_qr_code_scanner_24"
                android:drawableTint="?attr/colorOnPrimary"
                android:text="@string/action_scan" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:drawableTop="@drawable/outline_person_add_24"
                android:drawableTint="?attr/colorOnPrimary"
                android:text="@string/register_title" />

            <Button
                android:id="@+id/btn_list"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:drawableTop="@drawable/outline_format_list_bulleted_24"
                android:drawableTint="?attr/colorOnPrimary"
                android:text="@string/customerlist_title" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>